SearchBar covering first post header fixed

--- a/instagram-app/src/components/SearchBar.css
+++ b/instagram-app/src/components/SearchBar.css
@@ -1,7 +1,7 @@
 .Nav {
   background-color: #fff;
   border-bottom: 1px solid rgba(0, 0, 0, 0.0975);
-  position: fixed;
+  position: static;
   top: 0;
   width: 100%;
   z-index: 2;
